--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,34 @@
+.flex {
+  display: flex;
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptwg83HX_SGhgqk2hAjQlW_mEuZ0FsSd-OvHg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNRwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexXRWwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Rowdies';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/rowdies/v5/ptRMTieMYPNBAK219hth5O4.ttf) format('truetype');
+}
 * {
   margin: 0;
   padding: 0;
@@ -12,16 +43,6 @@ body {
 .wrapper {
   max-width: 1440px;
   margin: 0 auto;
-}
-.df {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.df-center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 ul {
   list-style: none;
@@ -52,8 +73,7 @@ a:hover {
 p {
   font-size: 16px;
 }
-.button {
-  padding: 11px 15px;
-  font-weight: 600;
+.img {
+  width: 100%;
 }
 /*  */
