--- a/less/business.less
+++ b/less/business.less
@@ -1,4 +1,5 @@
 @import "variables";
+@import "reset";
 .business{
     margin-top:49px;
 }
@@ -17,6 +18,9 @@
 }
 .business_strategy{
     gap: 30px;
+    .flex;
+    .justify-content(space-around);
+    .align-items(center);
 }
 .business_strategy-item{
     max-width: 350px;
