--- a/less/creativity.less
+++ b/less/creativity.less
@@ -1,7 +1,11 @@
 @import "variables";
+@import "reset";
 .creativity{
     margin-top:80px;
     gap: 30px;
+    .flex;
+    .justify-content(space-around);
+    .align-items(center);
 }
 .creativity_blog{
     width: 540px;
