--- a/less/variables.less
+++ b/less/variables.less
@@ -2,6 +2,7 @@
 @title-color:  #373F41;
 @text-color: #737B7D;
 @color-white: #fff;
+@color-btn--line:#3C64B1;
 // @gray: #696984;
 // @gray-light: #6c6c6c;
 // @gray-dark: #464646;
@@ -9,3 +10,22 @@
 // $purple: #5b72ee;
 // $yellow: #fff2e1;
 // $blue: #29b9e7;
+
+// Font Size
+// -----------------------------------------------------------
+
+@font-size-smallest: 8px;
+@font-size-small: 10px;
+@font-size-primary: 12px; 
+@font-size-body: 14px;
+@font-size-p:16px;
+
+
+// Font Weight
+// ------------------------------------------------------------
+
+@font-weight-regular: 400;    
+@font-weight-medium: 500; 
+@font-weight-semibold: 600; 
+@font-weight-bold: 700;  
+@font-weight-extrabold: 800;  
