--- a/css/business.css
+++ b/css/business.css
@@ -1,3 +1,82 @@
+.flex {
+  display: flex;
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptwg83HX_SGhgqk2hAjQlW_mEuZ0FsSd-OvHg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNRwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexXRWwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Rowdies';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/rowdies/v5/ptRMTieMYPNBAK219hth5O4.ttf) format('truetype');
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-size: 14px;
+  font-family: 'Mulish', sans-serif;
+  color: #373F41;
+}
+/* global */
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+ul {
+  list-style: none;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  font-weight: 700 !important;
+}
+a:hover {
+  text-decoration: none;
+}
+.align-items {
+  align-items: center ;
+}
+ul {
+  margin: 0 !important;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none !important;
+}
+a:hover {
+  text-decoration: none;
+}
+p {
+  font-size: 16px;
+}
+.img {
+  width: 100%;
+}
+/*  */
 .business {
   margin-top: 49px;
 }
@@ -16,6 +95,9 @@
 }
 .business_strategy {
   gap: 30px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 .business_strategy-item {
   max-width: 350px;
