--- a/css/shipping.css
+++ b/css/shipping.css
@@ -1,5 +1,87 @@
+.flex {
+  display: flex;
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptwg83HX_SGhgqk2hAjQlW_mEuZ0FsSd-OvHg.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexZNRwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/mulish/v7/1Ptyg83HX_SGhgqO0yLcmjzUAuWexXRWwaA.ttf) format('truetype');
+}
+@font-face {
+  font-family: 'Rowdies';
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/rowdies/v5/ptRMTieMYPNBAK219hth5O4.ttf) format('truetype');
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-size: 14px;
+  font-family: 'Mulish', sans-serif;
+  color: #373F41;
+}
+/* global */
+.wrapper {
+  max-width: 1440px;
+  margin: 0 auto;
+}
+ul {
+  list-style: none;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  font-weight: 700 !important;
+}
+a:hover {
+  text-decoration: none;
+}
+.align-items {
+  align-items: center ;
+}
+ul {
+  margin: 0 !important;
+}
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none !important;
+}
+a:hover {
+  text-decoration: none;
+}
+p {
+  font-size: 16px;
+}
+.img {
+  width: 100%;
+}
+/*  */
 .shipping_img {
   position: relative;
+}
+.shipping_img--header {
+  width: 100%;
 }
 .shipping_content {
   position: absolute;
@@ -21,18 +103,26 @@
   font-size: 17px;
 }
 .button--start {
-  align-items: center;
-  padding: 12px 18px;
+  font-size: 12px;
+  display: inline-block;
+  font-weight: 700;
+  border: 1px solid #3C64B1;
+  padding: 11px 15px;
   background: #3C64B1;
   color: #fff;
-  margin-right: 24px;
-  font-weight: 600;
+}
+.button--start:hover {
+  background: #3C64B1;
+  color: #fff;
 }
 .button--more {
+  font-size: 12px;
+  display: inline-block;
+  font-weight: 700;
   border: 1px solid #3C64B1;
-  padding: 11px 18px;
-  color: #373F41;
-  font-weight: 600;
+  padding: 11px 15px;
+  background: #fff;
+  color: #3C64B1;
 }
 .button--more:hover {
   background: #3C64B1;
