--- a/less/header.less
+++ b/less/header.less
@@ -1,25 +1,37 @@
 @import "variables";
+@import "reset";
 .header {
     padding:25px 0;
 }
 .header_content {
-    // .df(flex,space-around,center);
+    .flex;
+    .justify-content(space-around);
+    .align-items(center);
 }
 
 .header_menu {
     gap: 30px;
+    .flex;
+    .justify-content(space-around);
+    .align-items(center);
 }
 .menu_toggle {
     gap: 10px;
+    .flex;
+    .justify-content(space-around);
+    .align-items(center);
 }
 .menu-link {
     color: @title-color;
 }
 .button--outline {
-    padding: 11px 15px;
-    background-color: @primary-color;
-    color: white;
+    .button-inset(@color-white,@primary-color,@color-white,@primary-color)
 }
+// .button--outline {
+//     padding: 11px 15px;
+//     background-color: @primary-color;
+//     color: white;
+// }
 .button--signin {
     color: @primary-color;
 }
