--- a/less/reset.less
+++ b/less/reset.less
@@ -1,28 +1,44 @@
 @import "variables";
+.flex {
+    display: flex;
+}
+.display(@dis) {
+    display:@dis;
+}
+.justify-content(@_jc) {
+    justify-content:@_jc;
+}
+.flex-decoration (@_fd) {
+    flex-direction:@_fd;
+}
+.align-content(@_ac) {
+    align-content:@_ac;
+}
+.flex-wrap(@_fw) {
+    flex-wrap:@_fw;
+}
+.align-items(@_a-i) {
+    align-items:@_a-i;
+}
+.background-btn (@_bg-btn) {
+    background-color:@_bg-btn;
+}
+@import url("https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,700;1,300&family=Rowdies:wght@300&display=swap");
+@font-family: 'Mulish', sans-serif;
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    font-size:14px;
-    font-family: 'Mulish', sans-serif;
+    font-size:@font-size-body;
+    font-family:@font-family;
     color: @title-color;
 }
 /* global */
 .wrapper {
     max-width: 1440px;
     margin: 0 auto;
-}
-.df {
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-}
-.df-center {
-    display: flex;
-    justify-content:center;
-    align-items: center;
 }
 ul {
     list-style: none;
@@ -51,11 +67,34 @@ a:hover {
     text-decoration: none;
 }
 p {
-    font-size: 16px;
+    font-size:@font-size-p;
 }
-.button {
+.img {
+    width: 100%;
+}
+.button-inset(@color, @bg, @hover-color, @hover-bg) {
+    font-size: 12px;
+    display: inline-block;
+    // text-transform: uppercase;
+    font-weight: @font-weight-bold;
+    border: 1px solid @primary-color;
     padding: 11px 15px;
-    font-weight: 600;
+    background: @bg;
+    color: @color;
+    &:hover{
+        background: @hover-bg;
+        color: @hover-color;
+    }
+}
+.input(@width, @height, @bg) {
+    width: @width;
+    height:  @height;
+    padding-left: 10px;
+    font-size: 14px;
+    line-height: 20px;
+    border: 0;
+    background:@bg;
+    // color: #737B7D;
 }
 /*  */
 
