--- a/less/demo.less
+++ b/less/demo.less
@@ -1,10 +1,11 @@
-@import "reset";
-@import "header";
 @import "variables";
+@import "reset";
+@import "mixin";
+@import "./components/header.less";
 @import "shipping";
 @import "business";
 @import "content";
 @import "creativity";
 @import "product";
-@import "back-to-top";
+@import "./components/back-to-top";
 @import "responsive";
