--- a/less/variables.less
+++ b/less/variables.less
@@ -3,16 +3,7 @@
 @text-color: #737B7D;
 @color-white: #fff;
 @color-btn--line:#3C64B1;
-// @gray: #696984;
-// @gray-light: #6c6c6c;
-// @gray-dark: #464646;
-// @gray-darker: #252641;
-// $purple: #5b72ee;
-// $yellow: #fff2e1;
-// $blue: #29b9e7;
 
-// Font Size
-// -----------------------------------------------------------
 
 @font-size-smallest: 8px;
 @font-size-small: 10px;
@@ -23,9 +14,26 @@
 
 // Font Weight
 // ------------------------------------------------------------
+@font-weight__light: 300;
+@font-weight__regular: 400;
+@font-weight__heavier: 500;
+@font-weight__semibold: 600;
+@font-weight__bold: 700;
 
-@font-weight-regular: 400;    
-@font-weight-medium: 500; 
-@font-weight-semibold: 600; 
-@font-weight-bold: 700;  
-@font-weight-extrabold: 800;  
+@font-weight__base: @font-weight__regular;
+
+// letter-spacing
+@letter-spacing__s: 0.2px;
+@letter-spacing__m: 0.3px;
+@letter-spacing__l: 0.4px;
+
+// line-height
+@line-height__db-extra-small: 14px;
+@line-height__extra-small: 16px;
+@line-height__small: 18px;
+@line-height__medium: 20px;
+@line-height__large: 22px;
+@line-height__extra-large: 24px;
+@line-height__db-extra-large: 40px;
+@line-height__super-large: 56px;
+
