--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,37 +1,3 @@
-.flex {
-  display: flex;
-}
-.button--signin {
-  font-size: 12px;
-  display: inline-block;
-  font-weight: 700;
-  border: 1px solid #3C64B1;
-  padding: 11px 15px;
-  background: #fff;
-  color: #3C64B1;
-}
-.button--signin:hover {
-  background: #3C64B1;
-  color: #fff;
-}
-.input-pc {
-  width: 337px;
-  height: 42px;
-  padding-left: 10px;
-  font-size: 14px;
-  line-height: 20px;
-  border: 0;
-  background: #fff;
-}
-.input-tablet-mobile {
-  width: 170px;
-  height: 42px;
-  padding-left: 10px;
-  font-size: 14px;
-  line-height: 20px;
-  border: 0;
-  background: #fff;
-}
 @font-face {
   font-family: 'Mulish';
   font-style: italic;
@@ -108,43 +74,73 @@ p {
   width: 100%;
 }
 /*  */
-.business {
-  margin-top: 49px;
+.flex {
+  display: flex;
 }
-.business_header {
-  text-align: center;
-  margin-bottom: 24px;
+.button--outline {
+  font-size: 12px;
+  display: inline-block;
+  font-weight: 700;
+  border: 1px solid #3C64B1;
+  padding: 11px 15px;
+  background: #3C64B1;
+  color: #fff;
 }
-.business_header-title {
-  font-size: 32px;
-  color: #373F41;
-  line-height: 40px;
-  margin-bottom: 24px;
+.button--outline:hover {
+  background: #3C64B1;
+  color: #fff;
 }
-.business_header-text {
-  letter-spacing: 0.3px;
+.button--signin {
+  font-size: 12px;
+  display: inline-block;
+  font-weight: 700;
+  border: 1px solid #3C64B1;
+  padding: 11px 15px;
+  background: #fff;
+  color: #3C64B1;
 }
-.business_strategy {
+.button--signin:hover {
+  background: #3C64B1;
+  color: #fff;
+}
+.input-pc {
+  width: 337px;
+  height: 42px;
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  border: 0;
+  background: #fff;
+}
+.input-tablet-mobile {
+  width: 170px;
+  height: 42px;
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  border: 0;
+  background: #fff;
+}
+.header {
+  padding: 25px 0;
+}
+.header_content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.header_menu {
   gap: 30px;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
-.business_strategy-item {
-  max-width: 350px;
-  text-align: center;
+.menu_toggle {
+  gap: 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
-.strategy-item_title {
-  font-size: 18px;
-  margin-top: 24px;
-  margin-bottom: 12px;
-}
-.strategy-item_text {
-  font-size: 14px;
+.menu-link {
   color: #373F41;
-  margin-bottom: 22px;
-}
-.strategy-item_link {
-  color: #3C64B1;
-  font-weight: 600;
 }
