--- a/css/demo.css
+++ b/css/demo.css
@@ -1,6 +1,3 @@
-.flex {
-  display: flex;
-}
 @font-face {
   font-family: 'Mulish';
   font-style: italic;
@@ -77,6 +74,40 @@ p {
   width: 100%;
 }
 /*  */
+.flex {
+  display: flex;
+}
+.button--signin {
+  font-size: 12px;
+  display: inline-block;
+  font-weight: 700;
+  border: 1px solid #3C64B1;
+  padding: 11px 15px;
+  background: #fff;
+  color: #3C64B1;
+}
+.button--signin:hover {
+  background: #3C64B1;
+  color: #fff;
+}
+.input-pc {
+  width: 337px;
+  height: 42px;
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  border: 0;
+  background: #fff;
+}
+.input-tablet-mobile {
+  width: 170px;
+  height: 42px;
+  padding-left: 10px;
+  font-size: 14px;
+  line-height: 20px;
+  border: 0;
+  background: #fff;
+}
 .header {
   padding: 25px 0;
 }
@@ -99,22 +130,6 @@ p {
 }
 .menu-link {
   color: #373F41;
-}
-.button--outline {
-  font-size: 12px;
-  display: inline-block;
-  font-weight: 700;
-  border: 1px solid #3C64B1;
-  padding: 11px 15px;
-  background: #3C64B1;
-  color: #fff;
-}
-.button--outline:hover {
-  background: #3C64B1;
-  color: #fff;
-}
-.button--signin {
-  color: #3C64B1;
 }
 .shipping_img {
   position: relative;
